mise en place de la section titre

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title></title>
 </head>
 <body>
-    
+          <h1>TITRE</h1>
+          <h2>M. Fawoziath SALOU</h2>
+          <h3>email:saloufawoziath@gmail.com</h3>
+          <h3>Cel:+229 97 36 32 97</h3>
 </body>
 </html>
