--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
     <title></title>
 </head>
 <body>
+    <h1>DESCRIPTION</h1>
+    <p>
+        <div class="section">
+            <h2>Langues</h2>
+            <p>
+                Français, langue maternelle
+                <br>
+                Anglais, compétence professionnelle
+            </p>
+        </div>
+        <div class="section">
+            <h2>Centres d'intérêt</h2>
+            <p>
+                Jeux vidéo, jouer et développer
+                <br>
+                Musique, écoute et composition
+                <br>
+                Art en général
+                <br>
+                Sport
+                <br>
+                Informatique en général
+            </p>
+        </div>
+        
+    </p>    
+
     
 </body>
 </html>
