--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <title></title>
 </head>
 <body>
+    <h1>COMPETENCES</h1>
+    <div class="section">
+        <ul class="skills">
+            <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>Node.js</strong></li>
+            <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>Laravel Framework</strong></li>
+            <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>HTML5 | CSS</strong></li>
+            <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>Javascript</strong></li>
+            <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>Langage c</strong></li>
+            <li><i class="icon fas fa-check-circle text-darkblue"></i> <strong>npm </strong></li>
+            <li><i class="icon fas fa-check-circle text-darkblue"></i> PHP</li>
+            <li><i class="icon fas fa-check-circle text-darkblue"></i> React Framework</li>
+            <li><i class="icon fas fa-check-circle text-darkblue"></i> MySQL</li>
+            <li><i class="icon fas fa-check-circle text-darkblue"></i> Git | Github</li>
+        </ul>
+    </div>
     
 </body>
 </html>
